--- a/MyWebProject.csproj
+++ b/MyWebProject.csproj
@@ -5,7 +5,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+  <PropertyGroup>
+      <TargetFramework>net8.0</TargetFramework>
+      <RootNamespace>YourNamespace</RootNamespace>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.0.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
